# app-catalog-cleanup-tool

./: .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile.acct.mk  Pipfile  README.md  container-entrypoint.sh  dacct.sh  pyproject.toml  run-tests-in-docker.sh  setup.py  testrunner.Dockerfile
.circleci/: config.yml
.github/workflows/: cleanup.yaml
app_catalog_cleanup_tool/: __main__.py  config.py  splitters.py  version.py
tests/: test_helpers.py  test_splitters.py
tests/assets/: index.yaml
tests/e2e/: test_run.py
